@@ -32,7 +32,7 @@
 #include <string.h>
 #include <stdlib.h>
 
-#include "../libjp3dvm/openjpeg.h"
+#include "../libjp3dvm/openjpeg3d.h"
 #include "getopt.h"
 #include "convert.h"
 
